<resources>
    <string name="app_name">Filem</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="released_date">Released Date</string>
    <string name="overview">Overview</string>
    <string name="user_score">User Score</string>
    <string name="menu_movie">Movie</string>
    <string name="menu_tv">TV Show</string>
    <string name="menu_change_language">Change Language</string>
    <string name="first_air_date">First Air Date</string>
    <string name="title_detail_movie">Movie Detail</string>
    <string name="title_detail_tv">TV Show Detail</string>
    <string name="info_no_connection">Unable to get data. Please make sure you\'re connected to the internet and try again.</string>
    <string name="info_problem">Something is wrong. Please try again later.</string>
    <string name="try_again">Try Again</string>
    <string name="cast">Cast</string>
<<<<<<< HEAD
    <string name="favorites">Favorites</string>
    <string name="added_to_fave">Added to favorite</string>
    <string name="removed_from_fave">Removed from favorite</string>
    <string name="appwidget_text">My Favorite Movies</string>
    <string name="add_widget">Add widget</string>
    <string name="language">Language</string>
    <string name="daily_reminder">Daily reminder</string>
    <string name="notifications_setting">Notifications Setting</string>
    <string name="app_setting">App Setting</string>
    <string name="new_release_reminder">New release reminder</string>
    <string name="settings">Settings</string>
    <string name="content_daily_reminder">Hi! Don\'t forget to open Filem app today.</string>
    <string name="title_new_release">New Release TODAY!</string>
    <string name="content_new_release">%s released today. Tap for more info.</string>
=======
    <string name="header_image">Header image</string>
    <string name="movie_poster">Movie poster</string>
    <string name="warning_image">Warning Image</string>
>>>>>>> jetpack_submission_1
</resources>
