<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MovieDetailActivity">

    <TextView
            android:text="@string/user_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/txt_title"
            android:textSize="12sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_date"
            android:textStyle="bold"/>

    <ImageView
            android:layout_width="0dp"
            android:layout_height="300dp"
            tools:srcCompat="@tools:sample/avatars[10]"
            android:id="@+id/img_poster"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:layout_marginEnd="8dp"
            android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.5"/>

    <TextView
            tools:text="Avengers: Endgame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_title"
            app:layout_constraintTop_toTopOf="@+id/img_poster"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:textSize="18sp"
            android:textStyle="bold"/>

    <TextView
            android:text="@string/released_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_label_date"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_title"
            app:layout_constraintStart_toStartOf="@+id/txt_title"
            android:textSize="12sp"
            android:textStyle="bold"/>

    <TextView
            tools:text="12 December 2018"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_date"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_label_date"
            app:layout_constraintStart_toStartOf="@+id/txt_label_date"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <TextView
            tools:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_score"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <TextView
            android:text="@string/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/img_poster"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/img_poster"
            android:textSize="12sp"
            android:textStyle="bold"/>

    <TextView
            tools:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_overview"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>